--- a/English.lproj/ServerRepositoryRefSheet.xib
+++ b/English.lproj/ServerRepositoryRefSheet.xib
@@ -778,6 +778,14 @@
 					</object>
 					<int key="connectionID">450</int>
 				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBActionConnection" key="connection">
+						<string key="label">testConnectionInTerminal:</string>
+						<reference key="source" ref="1001"/>
+						<reference key="destination" ref="66085599"/>
+					</object>
+					<int key="connectionID">452</int>
+				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<array key="orderedObjects">
@@ -1157,7 +1165,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">450</int>
+			<int key="maxID">452</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -1215,6 +1223,7 @@
 					<dictionary class="NSMutableDictionary" key="actions">
 						<string key="sheetButtonCancel:">id</string>
 						<string key="sheetButtonOk:">id</string>
+						<string key="testConnectionInTerminal:">id</string>
 						<string key="validateButtons:">id</string>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="outlets">
